Updated README.  Fixed break in RPM build.
Added more details to the README file in trying to clarify things
that may not be obvious to all users.

An earlier change left an unpackaged RPM file in the doc directory,
causing make rpms to fail.  Changed the spec file to include doc/*.

Fixed an unused variable warning.

--- a/rpm/libvna.spec.in
+++ b/rpm/libvna.spec.in
@@ -46,9 +46,7 @@ make clean
 %{_libdir}/*.so.*
 
 %files devel
-%{_docdir}/%{name}/README-EXAMPLES
-%{_docdir}/%{name}/*-example.c
-%{_docdir}/%{name}/*-example.gnuplot
+%{_docdir}/%{name}/*
 %{_includedir}/*
 %{_libdir}/*.so
 %{_libdir}/*.a
