Significantly restructured vnacal
- Added support for T and U (inverse T) parameters, which in the two-port
  case, have 8, 10 or 16 error terms.  The 8 and 16 term variants are
  well-known in the literature.  The 10-term variant is the 8-term with
  the E11 leakage terms (leakage within the VNA) added.

- Replaced the SOLT E12 calibration with a generalized E12 based on
  U parameters, that can be calibrated using any of the (typically
  over-determined) methods that work with T and U parameters.  E12 has
  an advantage over T and U error terms in that it's the only type that
  can correct for a switch between the detectors and the DUT.

- Made many improvements to the API.  For example, new functions
  vnacal_new_add_single_reflect, vnacal_new_add_double_reflect and
  vnacal_new_add_through more naturally reflect the way calibration
  measurements are made.

- To be more consistent with tradition, VNA port numbers that appear in
  the API now start at 1 rather than 0.  C arrays still start at index 0.

- Dropped the vnacal_apply_t structure and functions that allowed
  measuring a DUT with more ports than the VNA.  The new vnacal_apply
  and vnacal_apply_m functions can handle the simple cases of mapping 1x2
  or 2x1 VNA's onto a 2x2 DUT.  Plan is to re-introduce the more general
  mapping functionality such that it also works when the unconnected DUT
  ports are connected to something other than perfect loads.  Dropping it
  for now to avoid having to break compatiblity again.

- Added ability to describe standards with unknown parameters (see
  vnacal_make_unknown_parameter and vnacal_make_correlated_parameter)
  needed for self-calibration methods such as TRL.  Currently,
  vnacal doesn't yet support these unknown standards -- the standards
  used for calibration must be fully known.  But the API for unknown
  parameters is sufficient to construct the "E" matrix and "f" vector
  described by Van hamme and Bossche, 1994, creating a path for
  self-calibration, 

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,12 +12,17 @@ SUFFIXES= .3 .pdf
 #
 include_HEADERS = vnacal.h vnaconv.h vnadata.h vnaerr.h vnafile.h
 lib_LTLIBRARIES = libvna.la
-libvna_la_SOURCES = archdep.h archdep.c \
-	vnacal_internal.h vnacal_apply.c vnacal_apply_alloc.c \
-	vnacal_calset.c vnacal_create.c vnacal_error.c \
-	vnacal_etermset.c vnacal_free.c vnacal_get.c vnacal_load.c \
-	vnacal_open.c vnacal_property.c vnacal_rfi.c vnacal_save.c \
-	vnacal_set_dprecision.c vnacal_set_fprecision.c \
+libvna_la_SOURCES = archdep.h archdep.c vnacal_internal.h \
+	vnacal_delete_parameter.c vnacal_apply.c vnacal_new_add_common.c \
+	vnacal_new_parameter.c vnacal_new_solve.c \
+	vnacal_new.c vnacal_create.c vnacal_calibration.c \
+	vnacal_make_correlated_parameter.c vnacal_make_scalar_parameter.c \
+	vnacal_make_unknown_parameter.c vnacal_make_vector_parameter.c \
+	vnacal_add_calibration.c vnacal_delete_calibration.c \
+	vnacal_layout.h vnacal_layout.c vnacal_get_parameter_value.c \
+	vnacal_error.c vnacal_find_calibration.c vnacal_free.c vnacal_get.c \
+	vnacal_load.c vnacal_property.c vnacal_rfi.c vnacal_save.c \
+	vnacal_set_dprecision.c vnacal_set_fprecision.c vnacal_parameter.c \
 	vnacommon_internal.h vnacommon_lu.c vnacommon_minverse.c \
 	vnacommon_mldivide.c vnacommon_mrdivide.c \
 	vnaerr_internal.h vnaerr_verror.c \
@@ -51,10 +56,12 @@ libvna_la_SOURCES = archdep.h archdep.c \
 	vnafile_load_touchstone.c vnafile_save.c \
 	vnaproperty.h vnaproperty_internal.h vnaproperty.c
 
+
 #
 # Man pages
 #
-dist_man_MANS = vnacal.3 vnaconv.3 vnadata.3 vnaerr.3 vnafile.3
+dist_man_MANS = vnacal.3 vnacal_new.3 vnacal_parameter.3 vnaconv.3 \
+	vnadata.3 vnaerr.3 vnafile.3
 
 #
 # Tests
@@ -125,7 +132,8 @@ plot: vnacal-example.out vnacal-example.gnuplot
 .3.pdf:
 	$(PDFROFF) -t -e -man --no-toc-relocation $< > "$@"
 
-pdfman: vnacal.pdf vnaconv.pdf vnadata.pdf vnaerr.pdf vnafile.pdf
+pdfman: vnacal.pdf vnacal_new.pdf vnacal_parameter.pdf vnaconv.pdf \
+	vnadata.pdf vnaerr.pdf vnafile.pdf
 
 clean-local:
 	rm -f example.vnacal vnacal-example.out vnacal-test.vnacal \
