--- a/.gitignore
+++ b/.gitignore
@@ -29,14 +29,21 @@ Makefile.in
 /test-driver
 rpm/libvna.spec
 src/example.vnacal
-src/test-suited
+src/test-suite.log
 src/vnacal-example
 src/vnacal-example.out
+src/vnacal_new.pdf
+src/vnacal_parameter.pdf
+src/vnacal.pdf
 src/vnacal-test
 src/vnacal-test.vnacal
 src/vnacommon-test
 src/vnaconv-example
+src/vnaconv.pdf
 src/vnaconv-test
 src/vnadata-example
+src/vnadata.pdf
+src/vnaerr.pdf
 src/vnafile-example
+src/vnafile.pdf
 src/vnaproperty-test
