Added vnacal-TSD-example program
Add an example of "through", "short", "delay" calibration.  For
consistency, renamed the existing vnacal-example to vnacal-SOLT-example.

--- a/.gitignore
+++ b/.gitignore
@@ -28,15 +28,18 @@ Makefile.in
 /stamp-h1
 /test-driver
 rpm/libvna.spec
-src/example.vnacal
+src/SOLT.vnacal
 src/test-suite.log
-src/vnacal-example
-src/vnacal-example.out
+src/TSD.vnacal
 src/vnacal_new.pdf
 src/vnacal_parameter.pdf
 src/vnacal.pdf
+src/vnacal-SOLT-example
+src/vnacal-SOLT-example.out
 src/vnacal-test
 src/vnacal-test.vnacal
+src/vnacal-TSD-example
+src/vnacal-TSD-example.out
 src/vnacommon-test
 src/vnaconv-example
 src/vnaconv.pdf
