Added support for TRL and other autocalibration techniques
Implemented the algorithm described in H. Van Hamme and M. Vanden Bossche,
"Flexible vector network analyzer calibration with accuracy bounds using
an 8-term or a 16-term error correction model," in IEEE Transactions on
Microwave Theory and Techniques, vol. 42, no. 6, pp. 976-987, June 1994,
doi: 10.1109/22.293566 in vnacal_new_solve to provide support iterative
solution of non-linear systems.  This provides support for TRL and other
autocalibration techniques.

--- a/.gitignore
+++ b/.gitignore
@@ -37,14 +37,16 @@ src/tests/test-vnacal-random
 src/tests/test-vnacal-save-load
 src/tests/test-vnacal-Silvonen16
 src/tests/test-vnacal-SOLT
+src/tests/test-vnacal-TRL
 src/tests/test-vnacal.vnacal
 src/tests/test-vnacommon-lu
 src/tests/test-vnacommon-minverse
 src/tests/test-vnacommon-mldivide
 src/tests/test-vnacommon-mrdivide
+src/tests/test-vnacommon-qr
 src/tests/test-vnacommon-qrd
 src/tests/test-vnacommon-qrsolve
-src/tests/test-vnacommon-qrsolve-q
+src/tests/test-vnacommon-qrsolve2
 src/tests/test-vnaconv-2x2
 src/tests/test-vnaconv-3x3
 src/tests/test-vnaproperty-expr
@@ -52,12 +54,14 @@ src/tests/test-vnaproperty-list
 src/tests/test-vnaproperty-map
 src/tests/test-vnaproperty-scalar
 src/tests/vnacal-test.vnacal
+src/TRL.vnacal
 src/TSD.vnacal
 src/vnacal_new.pdf
 src/vnacal_parameter.pdf
 src/vnacal.pdf
 src/vnacal-SOLT-example
 src/vnacal-SOLT-example.out
+src/vnacal-TRL-example
 src/vnacal-TSD-example
 src/vnacal-TSD-example.out
 src/vnaconv-example
