Split up tests and moved to src/test subdir
Moved the test programs into src/test and split them up so that each
major test is a separate program, better fitting automake's model.
Created a local vnacaltest library to further split up vnacal-test.c,
which had grown to over 6000 lines.

--- a/.gitignore
+++ b/.gitignore
@@ -28,25 +28,42 @@ Makefile.in
 /stamp-h1
 /test-driver
 rpm/libvna.spec
+src/cscope.out
 src/SOLT.vnacal
-src/test-suite.log
+src/tests/test-suite.log
+src/tests/test-vnacal-apply
+src/tests/test-vnacal-compat-V2
+src/tests/test-vnacal-random
+src/tests/test-vnacal-save-load
+src/tests/test-vnacal-Silvonen16
+src/tests/test-vnacal-SOLT
+src/tests/test-vnacal.vnacal
+src/tests/test-vnacommon-lu
+src/tests/test-vnacommon-minverse
+src/tests/test-vnacommon-mldivide
+src/tests/test-vnacommon-mrdivide
+src/tests/test-vnacommon-qrd
+src/tests/test-vnacommon-qrsolve
+src/tests/test-vnacommon-qrsolve-q
+src/tests/test-vnaconv-2x2
+src/tests/test-vnaconv-3x3
+src/tests/test-vnaproperty-expr
+src/tests/test-vnaproperty-list
+src/tests/test-vnaproperty-map
+src/tests/test-vnaproperty-scalar
+src/tests/vnacal-test.vnacal
 src/TSD.vnacal
 src/vnacal_new.pdf
 src/vnacal_parameter.pdf
 src/vnacal.pdf
 src/vnacal-SOLT-example
 src/vnacal-SOLT-example.out
-src/vnacal-test
-src/vnacal-test.vnacal
 src/vnacal-TSD-example
 src/vnacal-TSD-example.out
-src/vnacommon-test
 src/vnaconv-example
 src/vnaconv.pdf
-src/vnaconv-test
 src/vnadata-example
 src/vnadata.pdf
 src/vnaerr.pdf
 src/vnafile-example
 src/vnafile.pdf
-src/vnaproperty-test
