--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install-dependencies
+      run: sudo apt-get install libyaml-dev
     - name: bootstrap
       run: ./bootstrap
     - name: configure
