--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -20,7 +20,7 @@ jobs:
     - name: configure
       run: ./configure
     - name: make
-      run: make
+      run: make -j2
     - name: make check
       run: make check
     - name: make distcheck
